Category lookups in Data Views editing. - Fix for jump to top (thanks Adam) and Edit column render. - show all records (scrolling cuts off -- better to see all) - editable descriptions for all

--- a/study/webapp/study/DataViewsPanel.css
+++ b/study/webapp/study/DataViewsPanel.css
@@ -71,6 +71,11 @@
     height : 24px;
 }
 
+.x4-reset .x4-form-cb-label-after
+{
+    position: absolute;
+}
+
 .x4-reset .x4-form-checkbox, .x4-reset .x4-form-radio
 {
     float : left;
